After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683056 - doesn't strip line return from window title
doesn't strip line return from window title
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-30 19:00 UTC by William Jon McCann
Modified: 2013-01-16 19:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (40.74 KB, image/png)
2012-08-30 19:00 UTC, William Jon McCann
  Details
Don't allow multiline window titles (899 bytes, patch)
2012-08-30 19:39 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2012-08-30 19:00:05 UTC
Created attachment 222972 [details]
screenshot

If a string has an embedded new line in it we don't handle it very well.
Comment 1 William Jon McCann 2012-08-30 19:39:36 UTC
Created attachment 222983 [details] [review]
Don't allow multiline window titles
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-08-30 19:47:30 UTC
Review of attachment 222983 [details] [review]:

This will cause multiline titles to have weird glyph characters in them. Is that what we want, or do we want to replace it with a space?

Also, what do we do for window titles in the overview (or other places we show them, like Alt-Tab?)
Comment 3 William Jon McCann 2012-08-30 20:18:57 UTC
I don't really see the point in trying to pretty this up that much. If the name has some weird unicode character in it then so be it. I think the important thing is that we don't break when it does.

So by not break I guess I mean:

 * In places where we don't already wrap text - ensure we never break lines for embedded control characters either
 * In places where we wrap text... are there any?
Comment 4 Colin Walters 2012-08-30 20:40:30 UTC
Seems OK to me.
Comment 5 Owen Taylor 2012-10-08 17:12:11 UTC
If we want to make this look better, we should fix Pango to use U+23CE ⏎ or U+240D ␍ (or something else) - and also fix it for GtkEntry, etc, rather than special-casing it in Mutter.
Comment 6 Owen Taylor 2012-10-08 17:13:16 UTC
Review of attachment 222983 [details] [review]:

I think this is good to implement
Comment 7 William Jon McCann 2013-01-16 19:28:05 UTC
Attachment 222983 [details] pushed as 27e0e44 - Don't allow multiline window titles