Don't allow multiline window titles

https://bugzilla.gnome.org/show_bug.cgi?id=683056